[project]
name = "bloodhound-automation"
dynamic = ["version"]
description = "Bloodhound automation"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security"
]
dependencies = [
    "ansible-core==2.12.0",
    "docker==5.0.3",
    "docker-compose==1.29.2",
    "dockerpty==0.4.1",
    "requests==2.25.1",
    "urllib3==1.26.5",
    "PyYaml==5.3.1",
    "colorama"
]

[project.scripts]
bloodhound-automation = "src.project:main"
bha = "src.project:main"
